--- a/public/css/ticketing.css
+++ b/public/css/ticketing.css
@@ -52,49 +52,23 @@ body{
         align-items: center;
         grid-area: screen;
         .screen {
-            background-color: aliceblue;
+            background-color: var(--color-white);
             height: 1rem;
             width: 50%;
             margin: 1rem 0;
             transform: rotateX(-45deg);
-            box-shadow: 0px 3px 10px rgba(255, 255, 255, 0.75);
+            box-shadow: 0px 3px 10px var(--color-bright-gray);
         }
-        .row {
-            display: flex;
-            .seat {
-                background-color: var(--color-red);
-                height: 3rem;
-                width: 3.2rem;
-                margin: 0.2rem;
-                border-top-left-radius: 0.8rem;
-                border-top-right-radius: 0.8rem;
+        & .suudl {
+            display: flex; justify-content: center; gap: 2rem;
+            & input{
+                display: none;
             }
-    
-            .seat.selected {
-                background-color: var(--color-red);
-            }
-    
-            .seat.occupied {
-                background-color: var(--color-gray);
-            }
-            .seat:nth-of-type(5) {
-                margin-left: 1.2rem;
-            }
-    
-            .seat:nth-last-of-type(4) {
-                margin-left: 1.2rem;
-            }
-    
-            .seat:not(.occupied):hover {
-                cursor: pointer;
-                transform: scale(1.2);
-            }
-    
-            .showcase .seat:not(.occupied):hover {
-                cursor: default;
-                transform: scale(1);
+            & .bagana{
+                display: flex;
             }
         }
+
     }
     & #food_and_drinks{
         width: 90%;
@@ -111,9 +85,7 @@ body{
                 color: var(--color-bright-gray);
                 padding: 0.5rem;
             }
-            
             & button{
-                
                 color: var(--color-red);
                 padding: 0.25em 0.5em;
                 margin: 0.5rem;
@@ -240,63 +212,23 @@ body{
             background-color: var(--color-gray);
             & h3{
                 background-color: var(--color-gray);
-                padding: 4rem 7rem 2rem 7rem;
+                padding: 1rem 0 2rem 6rem;
             }
             & label{
                 background-color: var(--color-gray);
                 padding: 1rem;
+                font-weight: bold;
             }
+            
             & input{
-                width: 70%;
+                width: 65%;
                 padding: 0.4rem 0.5rem;
-                border: 0.1rem solid var(--color-border-line);
+                border: 1px solid var(--color-border-line);
+                color: var(--color-bright-gray);
                 border-radius: 5px;
                 background-color: var(--color-gray);
                 font-weight: bold;
             }
-            & .custom-radio{
-                display: none;
-            }
-            & .radio-label {
-                color: var(--color-bright-gray);
-              }
-              .radio-label {
-                display: flex;
-                align-items: center;
-                margin-bottom: 1rem;
-                cursor: pointer;
-            }
-            
-            & .checkbox-label {
-                display: flex;
-                align-items: center;
-                margin-bottom: 1rem;
-                cursor: pointer;
-            }
-            
-            & .checkbox-label::before {
-                content: '';
-                display: inline-block;
-                width: 0.7rem;
-                height: 0.7rem;
-                margin-right: 1rem;
-                border: 2px solid var(--color-red);
-                border-radius: 4px; /* Use a square border for checkboxes */
-            }
-            
-            & .checkbox-label:hover::before {
-                border-color: var(--color-blue); /* Change border color on hover */
-            }
-            
-            & .checkbox-label input[type="checkbox"] {
-                display: none; /* Hide the actual checkbox input */
-            }
-            
-            & .checkbox-label input[type="checkbox"]:checked + .checkbox-label::before {
-                background-color: var(--color-blue); /* Change background color when selected */
-            }
-            
-            
             & button{
                 background-color: var(--color-red);
                 border-radius: 5px;
