--- a/public/css/ticketing.css
+++ b/public/css/ticketing.css
@@ -103,7 +103,11 @@ body{
         grid-area: sidebar;
         background-color: var(--color-gray);
         padding: 2rem;
-
+        & button{
+            background-color: var(--color-gray);
+            border: 1px solid var(--color-white);
+            padding: 0.5rem 1rem;
+        }
         & h4{
             color: var(--color-bright-gray);
             background-color: var(--color-gray);
@@ -151,30 +155,7 @@ body{
             align-items: center;
             background-color: var(--color-gray);
             color: var(--color-gray);
-            & p{
-                background-color: var(--color-gray);
-                color: var(--color-bright-gray);
-                font-weight: bold;
-                
-            }
-            & button{
-                background-color: var(--color-gray);
-                color: var(--color-bright-gray);
-                padding: 0.25em 0.5em;
-                margin: 0.1rem;
-                border-radius: 100%;
-                border: 1px solid ;
-            }
-            & span{
-                background-color: var(--color-gray);
-            }
-            & .cost{
-                
-                color: var(--color-text-engiin);
-            }
-            & button + span{
-                margin: 0 -6rem 0 -6rem;
-            }
+            
         }
         & #food_drinks_cost{
             display: flex;
@@ -184,6 +165,7 @@ body{
             background-color: var(--color-gray);
             & p {
                 background-color: var(--color-gray);
+                color: var(--color-text-engiin);
                 font-weight: bold;
             }
             & .name_of_food{
@@ -203,6 +185,7 @@ body{
             }
             & #sum_cost{
                 background-color: var(--color-gray);
+                color: var(--color-text-engiin);
                 font-weight: bold;
 
             }
