--- a/public/css/header.css
+++ b/public/css/header.css
@@ -119,7 +119,7 @@ footer{
         }
     }
 }
-@media(max-width: 68rem){
+@media(max-width: 1088px){
     header{
         & nav:nth-of-type(2){
             & #menu{
@@ -146,7 +146,7 @@ footer{
         }
     }
 }
-@media(max-width: 48rem){
+@media(max-width: 768px){
     header{
         max-width: 48rem;
         & nav:nth-of-type(2){
@@ -199,7 +199,7 @@ footer{
     }
     
 }
-@media(max-width: 35rem){
+@media(max-width: 560px){
     header{
         max-width: 48rem;
         & nav:nth-of-type(2){
@@ -209,7 +209,7 @@ footer{
         }
     } 
 }
-@media(max-width: 25rem){
+@media(max-width: 400px){
     header{
         max-width: 25rem;
         & nav:nth-of-type(2){
